--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="https://discord.com/oauth2/authorize?client_id=1296061458848940044" class="button invite">Add Bot</a>
     </div>
     <footer>
-        <a href="terms-of-service.html" class="footer-link">Terms of Service</a> |
-        <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
+        <a href="https://github.com/FlowerTrick908/flowertrick/blob/main/TERMS.md" class="footer-link">Terms of Service</a> |
+        <a href="https://github.com/FlowerTrick908/flowertrick/blob/main/PRIVACY.md" class="footer-link">Privacy Policy</a>
     </footer>
     <script src="script.js"></script>
 </body>
